kubernetes/base/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1 # Adjust based on your needs
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf 
          subPath: default.conf
          readOnly: true
        - name: static-volume
          mountPath: /app/static
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
          items:
          - key: default.conf
            path: default.conf
      - name: static-volume
        persistentVolumeClaim:
          claimName: nginx-volume-claim
