kubernetes/base/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productconsilium-nginx-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
