kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productconsilium-service
spec:
  type: LoadBalancer
  selector:
    app: productconsilium-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
