kubernetes/base/pc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-consilium-ingress
  namespace: productconsilium
  annotations:
    kubernetes.io/ingress.class: "nginx"
    external-dns.alpha.kubernetes.io/hostname: dev-app.productconsilium.com
spec:
  rules:
  - host: dev-app.productconsilium.com
    http:
      paths:
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: productconsilium-nginx-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: productconsilium-service
            port:
              number: 80
